--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
 
   <div class="form-group">
     <label for="burg">Burger Name:</label>
-    <input type="text" id="burg" name="name">
+    <input type="text" id="burg" name="burger_name">
   </div>
 
   <div class="form-group">
