--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
-<li>
+<li class="devoured">
 	{{burger_name}}
-
-	<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
-		{{#if devoured}}DEVOUR!{{else}}UNDEVOUR?!{{/if}}
-	</button>
+	{{#if devoured}}<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
+		DEVOUR!
+	</button>{{/if}}
+	
 </li>
